updated css and font

--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 @import '../node_modules/@lumino/dragdrop/style/index.css';
 @import '../node_modules/@lumino/widgets/style/index.css';
@@ -32,6 +32,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-family: 'Roboto', sans-serif;
   }
   #dock {
     padding: 4px;
